<?xml version="1.0" encoding="utf-8"?>
<!--================================================================-->
<!-- xmlName		: configuration.xml								-->
<!-- 概要			: コンフィグ画面定義									-->
<!-- 																-->
<!--  LiplisAndroidシステム     									 		-->
<!--  Copyright(c) 2011-2011 sachin. All Rights Reserved. 			-->
<!--================================================================-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/setting_repeat" android:layout_gravity="center">
    <ScrollView android:layout_marginBottom="60dip" android:layout_width="fill_parent" android:id="@+id/sclv" android:layout_height="fill_parent">

        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:id="@+id/llMaster" android:layout_gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/llBkackLine1"
                android:layout_width="fill_parent"
                android:layout_height="2sp"
                android:background="@color/black"
                android:orientation="horizontal" >
</LinearLayout>
            <TextView android:textColor="@color/black" android:background="@color/textBack" android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/intro_Liplis" android:id="@+id/txtTitle"></TextView>
            <LinearLayout android:id="@+id/llIcon" android:layout_width="fill_parent" android:layout_gravity="center_horizontal" android:layout_height="wrap_content">
                <LinearLayout android:layout_height="wrap_content" android:layout_width="220sp" android:orientation="vertical" android:id="@+id/llIntroText">

                    <LinearLayout
                        android:id="@+id/sp0"
                        android:layout_width="fill_parent"
                        android:layout_height="20sp"
                        android:orientation="horizontal" >
</LinearLayout>
                    <TextView android:layout_height="wrap_content" android:text="@string/intro_1" android:textColor="@color/black" android:layout_width="220sp" android:id="@+id/txtIntro1"></TextView>

                    <LinearLayout
                        android:id="@+id/sp1"
                        android:layout_width="fill_parent"
                        android:layout_height="20sp"
                        android:orientation="horizontal" >
</LinearLayout>
                    <TextView android:layout_width="220sp" android:layout_height="wrap_content" android:id="@+id/txtIntro2" android:textColor="@color/black" android:text="@string/intro_2"></TextView>

                    <LinearLayout
                        android:id="@+id/sp2"
                        android:layout_width="fill_parent"
                        android:layout_height="20sp"
                        android:orientation="horizontal" >
</LinearLayout>
                    <TextView android:layout_width="220sp" android:layout_height="wrap_content" android:textColor="@color/black" android:id="@+id/txtIntro3" android:text="@string/intro_3"></TextView>
                </LinearLayout>
                <ImageView android:layout_height="fill_parent" android:layout_width="fill_parent" android:src="@drawable/introduction" android:id="@+id/liplisImage"></ImageView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSp1"
                android:layout_width="fill_parent"
                android:layout_height="20sp"
                android:orientation="horizontal" >
</LinearLayout>

            <LinearLayout
                android:id="@+id/llBlackLine2"
                android:layout_width="fill_parent"
                android:layout_height="2sp"
                android:background="@color/black"
                android:orientation="horizontal" >
</LinearLayout>
            <TextView android:textColor="@color/black" android:background="@color/textBack" android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/intro_Set" android:id="@+id/txtSetTitle"></TextView>
            <LinearLayout android:layout_width="fill_parent" android:id="@+id/llSet" android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_height="wrap_content">
                <TextView android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/intro_Set_1" android:id="@+id/txtSet1"></TextView>
                <TextView android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/intro_Set_2" android:id="@+id/txtSet2"></TextView>
                <TextView android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/intro_Set_3" android:id="@+id/txtSet3"></TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSpase2"
                android:layout_width="fill_parent"
                android:layout_height="20sp"
                android:orientation="horizontal" >
</LinearLayout>

            <LinearLayout
                android:id="@+id/llBlackLine3"
                android:layout_width="fill_parent"
                android:layout_height="2sp"
                android:background="@color/black"
                android:orientation="horizontal" >
</LinearLayout>
            <TextView android:textColor="@color/black" android:background="@color/textBack" android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/txtAttention" android:text="@string/intro_Attention"></TextView>
            <LinearLayout android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:orientation="vertical" android:id="@+id/llAttention" android:layout_height="wrap_content">
                <TextView android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/intro_Attention1" android:id="@+id/txtAttention1"></TextView>

                <LinearLayout
                    android:id="@+id/llsp4"
                    android:layout_width="fill_parent"
                    android:layout_height="20sp"
                    android:orientation="horizontal" >

                </LinearLayout>
                <TextView android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/txtAttention2" android:text="@string/intro_Attention2"></TextView>

                <LinearLayout
                    android:id="@+id/llsp5"
                    android:layout_width="fill_parent"
                    android:layout_height="20sp"
                    android:orientation="horizontal" >

                </LinearLayout>
                <TextView android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/txtAttention3" android:text="@string/intro_Attention3"></TextView>

                <LinearLayout
                    android:id="@+id/llsp6"
                    android:layout_width="fill_parent"
                    android:layout_height="20sp"
                    android:orientation="horizontal" >
</LinearLayout>
                <TextView android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/txtAttention4" android:text="@string/intro_Attention4"></TextView>

                <LinearLayout
                    android:id="@+id/llsp7"
                    android:layout_width="fill_parent"
                    android:layout_height="20sp"
                    android:orientation="horizontal" >
</LinearLayout>
                <TextView android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/txtAttention5" android:text="@string/intro_Attention5"></TextView>

                                <LinearLayout
                                    android:id="@+id/llsp8"
                                    android:layout_width="fill_parent"
                                    android:layout_height="20sp"
                                    android:orientation="horizontal" >
</LinearLayout>
                <TextView android:layout_height="wrap_content" android:textColor="@color/black" android:layout_width="fill_parent" android:id="@+id/txtAttention6" android:text="@string/intro_Attention6"></TextView>

                <LinearLayout
                    android:id="@+id/llsp9"
                    android:layout_width="fill_parent"
                    android:layout_height="20sp"
                    android:orientation="horizontal" >
</LinearLayout>
                <TextView android:layout_height="wrap_content" android:textColor="@color/black" android:layout_width="fill_parent" android:id="@+id/txtAttention7" android:text="@string/intro_Attention7"></TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSpase3"
                android:layout_width="fill_parent"
                android:layout_height="20sp"
                android:orientation="horizontal" >
</LinearLayout>

            <LinearLayout
                android:id="@+id/llBlackLine4"
                android:layout_width="fill_parent"
                android:layout_height="2sp"
                android:background="@color/black"
                android:orientation="horizontal" >
</LinearLayout>
            <TextView android:textColor="@color/black" android:background="@color/textBack" android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/txtMail" android:text="@string/intro_Mail"></TextView>
            <LinearLayout android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:orientation="vertical" android:id="@+id/llMail" android:layout_height="wrap_content">
                <TextView android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/intro_Mail1" android:id="@+id/txtmail1" android:autoLink="email"></TextView>

                <LinearLayout
                    android:id="@+id/llsp10"
                    android:layout_width="fill_parent"
                    android:layout_height="20sp"
                    android:orientation="horizontal" >
</LinearLayout>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtMailAddress" android:text="@string/intro_MailAddress" android:autoLink="email" android:textSize="20sp"></TextView>

                <LinearLayout
                    android:id="@+id/llsp11"
                    android:layout_width="fill_parent"
                    android:layout_height="20sp"
                    android:orientation="horizontal" >
</LinearLayout>
            </LinearLayout>

        </LinearLayout>
       
    </ScrollView>
    <LinearLayout android:layout_width="fill_parent" android:layout_marginTop="-60sp" android:layout_height="60sp" android:orientation="horizontal" android:id="@+id/llButton" android:padding="5dip">

        <LinearLayout
            android:id="@+id/llButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnIntroSetting"
                android:layout_width="0dip"
                android:layout_height="50sp"
                android:layout_gravity="right"
                android:layout_weight="10"
                android:background="@drawable/button"
                android:padding="5dip"
                android:text="@string/intro_setting"
                android:textColor="@color/black" >
</Button>

            <LinearLayout
                android:id="@+id/llsp12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:orientation="horizontal" >
</LinearLayout>

            <Button
                android:id="@+id/btnIntroClose"
                android:layout_width="0dip"
                android:layout_height="50sp"
                android:layout_gravity="left"
                android:layout_weight="10"
                android:background="@drawable/button"
                android:padding="5dip"
                android:text="@string/intro_close"
                android:textColor="@color/black" >
</Button>
        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>