<?xml version="1.0" encoding="utf-8"?>
<!--================================================================-->
<!-- xmlName		: twitterconfiguration.xml								-->
<!-- 概要			: ツイッターコンフィグ画面定義									-->
<!-- 																-->
<!--  LiplisAndroidシステム     									 		-->
<!--  Copyright(c) 2011-2011 sachin. All Rights Reserved. 			-->
<!--================================================================-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/setting_repeat">
    <ScrollView android:layout_marginBottom="50dip" android:layout_width="fill_parent" android:id="@+id/sclv" android:layout_height="fill_parent">








        <LinearLayout
            android:id="@+id/llMaster"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/llSp0"
                android:layout_width="fill_parent"
                android:layout_height="2sp"
                android:background="@color/black"
                android:orientation="horizontal" >

            </LinearLayout>

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/textBack"
                android:text="@string/twitter_regist_title"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/llIcon"
                android:layout_width="fill_parent"
                android:layout_height="100sp" >

                <LinearLayout
                    android:id="@+id/llIntro"
                    android:layout_width="220sp"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtIntro1"
                        android:layout_width="220sp"
                        android:layout_height="wrap_content"
                        android:text="@string/twitter_regist_text1"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txtIntro3"
                        android:layout_width="220sp"
                        android:layout_height="wrap_content"
                        android:text="@string/twitter_regist_text2"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txtIntro4"
                        android:layout_width="220sp"
                        android:layout_height="wrap_content"
                        android:text="@string/twitter_regist_text3"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:id="@+id/llLink"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <LinearLayout
                            android:id="@+id/llSpaseBtn"
                            android:layout_width="10sp"
                            android:layout_height="fill_parent"
                            android:orientation="horizontal" >

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/twitterImage"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:src="@drawable/icon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSpase2"
                android:layout_width="fill_parent"
                android:layout_height="2sp"
                android:background="@color/black"
                android:orientation="horizontal" >

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPinCodeTitle"
                android:layout_width="fill_parent"
                android:layout_height="20sp" >

                <TextView
                    android:id="@+id/txtPinCodeTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/textBack"
                    android:text="@string/twitter_regist_pin"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPinCode"
                android:layout_width="fill_parent"
                android:layout_height="62dp"
                android:padding="5dip" >

                <LinearLayout
                    android:id="@+id/llsp3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                </LinearLayout>

                <EditText
                    android:id="@+id/edPinCode"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:ems="10"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btnInputPinCode"
                    android:layout_width="0dip"
                    android:layout_height="50sp"
                    android:layout_weight="10"
                    android:background="@drawable/button"
                    android:padding="5dip"
                    android:text="@string/twitter_regist_pin_btn"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/llsp4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    <LinearLayout android:id="@+id/llButton" android:layout_height="60sp" android:orientation="horizontal" android:layout_marginTop="-60sp" android:layout_width="fill_parent" android:padding="5dip">
        <LinearLayout android:id="@+id/llButton" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="left" android:layout_width="fill_parent" android:layout_gravity="left">

            <LinearLayout
                android:id="@+id/llsp10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:orientation="horizontal" >
</LinearLayout>

            <Button
                android:id="@+id/btnTwitterRegistClose"
                android:layout_width="0dip"
                android:layout_height="50sp"
                android:layout_gravity="left"
                android:layout_weight="10"
                android:background="@drawable/button"
                android:padding="5dip"
                android:text="@string/configure_close"
                android:textColor="@color/black" >

</Button>

            <LinearLayout
                android:id="@+id/llsp11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>